RESOLVED FIXED188023
Systems with no NSScreens hitting assertion in rendererIDForDisplay when creating WebGL context
https://bugs.webkit.org/show_bug.cgi?id=188023
Summary Systems with no NSScreens hitting assertion in rendererIDForDisplay when crea...
Justin Fan
Reported 2018-07-25 14:59:40 PDT
Systems with no NSScreens hitting assertion in rendererIDForDisplay when creating WebGL context
Attachments
Patch (1.49 KB, patch)
2018-07-25 15:06 PDT, Justin Fan
no flags
Justin Fan
Comment 1 2018-07-25 15:05:58 PDT
Justin Fan
Comment 2 2018-07-25 15:06:37 PDT
EWS
Comment 3 2018-07-25 17:15:13 PDT
Comment on attachment 345790 [details] Patch Rejecting attachment 345790 [details] from commit-queue. justin_fan@apple.com does not have committer permissions according to https://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/contributors.json. - If you do not have committer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/contributors.json by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
WebKit Commit Bot
Comment 4 2018-07-25 17:34:18 PDT
Comment on attachment 345790 [details] Patch Clearing flags on attachment: 345790 Committed r234224: <https://trac.webkit.org/changeset/234224>
WebKit Commit Bot
Comment 5 2018-07-25 17:34:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.