Systems with no NSScreens hitting assertion in rendererIDForDisplay when creating WebGL context https://bugs.webkit.org/show_bug.cgi?id=188023 <rdar://problem/42476622>

Patch by Justin Fan <justin_fan@apple.com> on 2018-07-25
Reviewed by Simon Fraser.

On systems with no NSScreens, PlatformScreenMac's screenData map is not populated; rendererIDForDisplay
will thus hit an assertion rather than returning 0. Removing the assertion for now.

Covered by existing tests.

* platform/mac/PlatformScreenMac.mm:
(WebCore::rendererIDForDisplay):

Canonical link: https://commits.webkit.org/203189@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234224 268f45cc-cd09-0410-ab3c-d52691b4dbfc